log
Wed 15 May 2024 11:14:37 PM UTC: 
 tests:  0|5
total_score: 0/70
c402f82
Wed 15 May 2024 11:21:00 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: expected expression before ‘)’ token
   59 |          if()
      |             ^
sudoku.c:55:13: error: unused variable ‘k’ [-Werror=unused-variable]
   55 |     int i,j,k;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
6457e29
Wed 15 May 2024 11:21:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: expected expression before ‘)’ token
   59 |          if()
      |             ^
Compilation failed
d3e0282
Wed 15 May 2024 11:21:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c948dcf
Wed 15 May 2024 11:26:13 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9301823
Wed 15 May 2024 11:29:45 PM UTC: 
 sudoku.c | 16 ++++------------
 1 file changed, 4 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
8c14e10
Wed 15 May 2024 11:29:51 PM UTC: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
e798a09
Wed 15 May 2024 11:42:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:13: error: unused variable ‘k’ [-Werror=unused-variable]
   55 |     int i,j,k;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
8d77171
